--- a/_content/phase_1_winning/stage_01/stg01_020_what_we_are_against_landing_page.adoc
+++ b/_content/phase_1_winning/stage_01/stg01_020_what_we_are_against_landing_page.adoc
@@ -1,4 +1,7 @@
-# Say What We Are Against
+---
+sort_number: 020
+---
+= Say What We Are Against
 :doctype: book
 :table-caption: Data Set
 :imagesdir: /content/media/images/
