--- a/_content/phase_1_winning/stage_04/120th_congress_year_1.adoc
+++ b/_content/phase_1_winning/stage_04/120th_congress_year_1.adoc
@@ -1,3 +1,6 @@
+---
+sort_number: 020
+---
 = 120th Congress Year One
 :doctype: book
 :table-caption: Data Set
@@ -9,7 +12,7 @@
 :page-todos: Flesh out the perils. 
 :showtitle:
 
-= Will the Congress Protect the Presidential Elector Ballots?
+== Will the Congress Protect the Presidential Elector Ballots?
 
 Perhaps the most urgent need for the 120th Congress will be making plans for January 6th, 2029.
 
