--- a/_content/phase_1_winning/stage_07/defending_the_election_stage_1_dc_and_national_guard.adoc
+++ b/_content/phase_1_winning/stage_07/defending_the_election_stage_1_dc_and_national_guard.adoc
@@ -1,4 +1,7 @@
-# Defending the Election, Stage 1: DC and the National Guard
+---
+sort_number: 020
+---
+= Defending the Election, Stage 1: DC and the National Guard
 :doctype: book
 :table-caption: Data Set
 :imagesdir: /content/media/images/
