--- a/_content/source_docs/source_docs_licensing.adoc
+++ b/_content/source_docs/source_docs_licensing.adoc
@@ -1,3 +1,6 @@
+---
+sort_number: 010
+---
 # Source Docs Licensing
 
 Wherever possible, we have striven to use source documents in the public domain. 
