Label all music with AI component
Also add a section on the home page for legislation only.

--- a/_content/legislation_and_amendments/fair_commerce/fair_commerce_landing_page.adoc
+++ b/_content/legislation_and_amendments/fair_commerce/fair_commerce_landing_page.adoc
@@ -23,7 +23,8 @@ to maximize a few men's rise,  +
 and now a change you need."_ 
 
 _From <</content/misc_docs/lyrics/030_o_beautiful_the_policy.adoc#,O Beautiful The Policy.>>_ +
-_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"] Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
+_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"]_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for Fair Commerce
 
