--- a/_content/legislation_and_amendments/fair_commerce/fair_commerce_legislation.adoc
+++ b/_content/legislation_and_amendments/fair_commerce/fair_commerce_legislation.adoc
@@ -24,7 +24,8 @@ for maximize means all will rise, +
 and birth a brand new day."_ 
 
 _From <</content/misc_docs/lyrics/030_o_beautiful_the_policy.adoc#,O Beautiful The Policy.>>_ +
-_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"] Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
+_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"]_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for Fair Commerce
 
