--- a/_content/legislation_and_amendments/the_share/the_share_landing_page.adoc
+++ b/_content/legislation_and_amendments/the_share/the_share_landing_page.adoc
@@ -24,7 +24,8 @@ with Rights Inalienable to Dignity for All. +
 The arc of history bends again, and we must heed the call, +
     -- For Justice Marches On!"_ 
 
-_From <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ 
+_Lyrics by Vector Hasting, from <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for The Share
 
