--- a/_content/legislation_and_amendments/the_share/the_share_legislation.adoc
+++ b/_content/legislation_and_amendments/the_share/the_share_legislation.adoc
@@ -24,7 +24,8 @@ and wash away the fear that fills the Land of We the Brave. +
 We turn our gaze to future days, our children we must save,  +
   -- For Justice Marches On!"_
 
-From <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ 
+_Lyrics by Vector Hasting, from <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for The Share
 
