--- a/_content/legislation_and_amendments/the_share/the_share_moral_argument.adoc
+++ b/_content/legislation_and_amendments/the_share/the_share_moral_argument.adoc
@@ -23,7 +23,8 @@ from poor and weak who only seek to beg an honest deal. +
 The time has come to set it straight, a Nation we must heal,  +
     -- For Justice Marches On!"_
 
-_From <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ 
+_Lyrics by Vector Hasting, from <</content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc#,Lyrics to The Battle Hymn for Fair And Share.>>_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for The Share
 
