--- a/_content/legislation_and_amendments/voting_rights_for_america/voting_rights_for_america_landing_page.adoc
+++ b/_content/legislation_and_amendments/voting_rights_for_america/voting_rights_for_america_landing_page.adoc
@@ -24,7 +24,8 @@ She said a better kind o' vote was rankin' who you're good fer.  +
 We mightn't get our favorite one, but won't get stuck a loser_ 
 
 _From <</content/misc_docs/lyrics/020_yankee_doodle_went_to_vote.adoc#,Yankee Doodle Went to Vote.>>_ +
-_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"] Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
+_Lyrics by Vector Hasting, link:https://creativecommons.org/licenses/by-sa/4.0/deed.en["CC 4.0-BY-SA,", window=read-later,opts="noopener,nofollow"]_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 == Links for Voting Rights for America
 
